Working STOP mode, low power OK but not great
Whole board down to 4.4mA when ESP8266 is asleep. Odd thing is this drops
to 2.1mA immediatel after STM32 is reset.

Cause appears to be writing to ADC channels (from ADC_CHANNEL[3] and up),
even if the channels are being disabled not enabled. Not clear what the
real cause is yet.

Lots of workarounds in code now, none of which appear to have a large impact.

--- a/STM_Firmware/Makefile
+++ b/STM_Firmware/Makefile
@@ -90,7 +90,7 @@ C_INCLUDES += -Idrivers/CMSIS/Include
 C_INCLUDES += -Idrivers/CMSIS/Device/ST/STM32F0xx/Include
 # compile gcc flags
 ASFLAGS = -mthumb -mcpu=cortex-m0 $(AS_DEFS) $(AS_INCLUDES) $(OPT) -Wall -Werror -fdata-sections -ffunction-sections
-CFLAGS = -mthumb -mcpu=cortex-m0 $(C_DEFS) $(C_INCLUDES) $(OPT) -Wall -Werror -fdata-sections -ffunction-sections
+CFLAGS = -std=gnu99 -mthumb -mcpu=cortex-m0 $(C_DEFS) $(C_INCLUDES) $(OPT) -Wall -Werror -fdata-sections -ffunction-sections
 CFLAGS += -g -gdwarf-2
 # Generate dependency information
 CFLAGS += -MD -MP -MF .dep/$(@F).d
