STM FW: Rename to esplant_stm_fw

--- a/STM_Firmware/Makefile
+++ b/STM_Firmware/Makefile
@@ -5,7 +5,7 @@
 ######################################
 # target
 ######################################
-TARGET = stm_fw_cube
+TARGET = esplant_stm_fw
 
 ######################################
 # building variables
@@ -16,7 +16,7 @@ DEBUG = 0
 OPT = -Os
 
 #######################################
-# pathes
+# paths
 #######################################
 # source path
 # Build path
