Change the git submodule url for the FT kicad library

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Circuit/freetronics_kicad_library"]
 	path = Circuit/freetronics_kicad_library
-	url = git@github.com:freetronics/freetronics_kicad_library.git
+	url = https://github.com/freetronics/freetronics_kicad_library.git
 [submodule "Circuit/kicad-ESP8266"]
 	path = Circuit/kicad-ESP8266
 	url = https://github.com/jdunmire/kicad-ESP8266.git
